build/clooc/src/com/tncy/clooc/main/LoocParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Looc.g 2017-03-17 15:40:44

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class LoocParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAM", "CLASS", "VARDEC", "METHODDEC", "METHODARGS", "AFFECT", "IF", "FOR", "ANONYMOUSBLOCK", "WRITE", "READ", "RETURN", "EXPR", "NEW", "METHODCALLING", "THIS", "THEN", "SUPER", "INT", "STRING", "ARG", "BLOCK", "DO", "ELSE", "IDFC", "IDF", "STRING_CST", "INT_CST", "ESC_SEQ", "WS", "COMMENT", "UNICODE_ESC", "OCTAL_ESC", "HEX_DIGIT", "'class'", "'inherit'", "'='", "'('", "')'", "'var'", "':'", "';'", "'int'", "'string'", "'method'", "'{'", "'}'", "','", "':='", "'if'", "'then'", "'else'", "'fi'", "'for'", "'in'", "'..'", "'do'", "'end'", "'nil'", "'write'", "'read'", "'return'", "'this'", "'super'", "'new'", "'+'", "'-'", "'*'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'.'"
    };
    public static final int EOF=-1;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int PROGRAM=4;
    public static final int CLASS=5;
    public static final int VARDEC=6;
    public static final int METHODDEC=7;
    public static final int METHODARGS=8;
    public static final int AFFECT=9;
    public static final int IF=10;
    public static final int FOR=11;
    public static final int ANONYMOUSBLOCK=12;
    public static final int WRITE=13;
    public static final int READ=14;
    public static final int RETURN=15;
    public static final int EXPR=16;
    public static final int NEW=17;
    public static final int METHODCALLING=18;
    public static final int THIS=19;
    public static final int THEN=20;
    public static final int SUPER=21;
    public static final int INT=22;
    public static final int STRING=23;
    public static final int ARG=24;
    public static final int BLOCK=25;
    public static final int DO=26;
    public static final int ELSE=27;
    public static final int IDFC=28;
    public static final int IDF=29;
    public static final int STRING_CST=30;
    public static final int INT_CST=31;
    public static final int ESC_SEQ=32;
    public static final int WS=33;
    public static final int COMMENT=34;
    public static final int UNICODE_ESC=35;
    public static final int OCTAL_ESC=36;
    public static final int HEX_DIGIT=37;

    // delegates
    // delegators


        public LoocParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LoocParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return LoocParser.tokenNames; }
    public String getGrammarFileName() { return "Looc.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // Looc.g:49:1: program : ( class_decl )* ( decl_ins )* -> ^( PROGRAM ( class_decl )* ( decl_ins )* ) ;
    public final LoocParser.program_return program() throws RecognitionException {
        LoocParser.program_return retval = new LoocParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LoocParser.class_decl_return class_decl1 = null;

        LoocParser.decl_ins_return decl_ins2 = null;


        RewriteRuleSubtreeStream stream_decl_ins=new RewriteRuleSubtreeStream(adaptor,"rule decl_ins");
        RewriteRuleSubtreeStream stream_class_decl=new RewriteRuleSubtreeStream(adaptor,"rule class_decl");
        try {
            // Looc.g:49:8: ( ( class_decl )* ( decl_ins )* -> ^( PROGRAM ( class_decl )* ( decl_ins )* ) )
            // Looc.g:49:12: ( class_decl )* ( decl_ins )*
            {
            // Looc.g:49:12: ( class_decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==38) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // Looc.g:49:13: class_decl
            	    {
            	    pushFollow(FOLLOW_class_decl_in_program203);
            	    class_decl1=class_decl();

            	    state._fsp--;

            	    stream_class_decl.add(class_decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // Looc.g:49:26: ( decl_ins )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==IDF||LA2_0==43||LA2_0==49||LA2_0==53||LA2_0==57||LA2_0==60||(LA2_0>=63 && LA2_0<=65)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Looc.g:49:26: decl_ins
            	    {
            	    pushFollow(FOLLOW_decl_ins_in_program207);
            	    decl_ins2=decl_ins();

            	    state._fsp--;

            	    stream_decl_ins.add(decl_ins2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);



            // AST REWRITE
            // elements: decl_ins, class_decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 49:36: -> ^( PROGRAM ( class_decl )* ( decl_ins )* )
            {
                // Looc.g:49:39: ^( PROGRAM ( class_decl )* ( decl_ins )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                // Looc.g:49:49: ( class_decl )*
                while ( stream_class_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_class_decl.nextTree());

                }
                stream_class_decl.reset();
                // Looc.g:49:63: ( decl_ins )*
                while ( stream_decl_ins.hasNext() ) {
                    adaptor.addChild(root_1, stream_decl_ins.nextTree());

                }
                stream_decl_ins.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class class_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_decl"
    // Looc.g:51:1: class_decl : 'class' IDFC ( 'inherit' IDFC )? '=' '(' class_item_decl ')' -> ^( CLASS IDFC ( IDFC )? class_item_decl ) ;
    public final LoocParser.class_decl_return class_decl() throws RecognitionException {
        LoocParser.class_decl_return retval = new LoocParser.class_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal3=null;
        Token IDFC4=null;
        Token string_literal5=null;
        Token IDFC6=null;
        Token char_literal7=null;
        Token char_literal8=null;
        Token char_literal10=null;
        LoocParser.class_item_decl_return class_item_decl9 = null;


        CommonTree string_literal3_tree=null;
        CommonTree IDFC4_tree=null;
        CommonTree string_literal5_tree=null;
        CommonTree IDFC6_tree=null;
        CommonTree char_literal7_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree char_literal10_tree=null;
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_IDFC=new RewriteRuleTokenStream(adaptor,"token IDFC");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleSubtreeStream stream_class_item_decl=new RewriteRuleSubtreeStream(adaptor,"rule class_item_decl");
        try {
            // Looc.g:51:11: ( 'class' IDFC ( 'inherit' IDFC )? '=' '(' class_item_decl ')' -> ^( CLASS IDFC ( IDFC )? class_item_decl ) )
            // Looc.g:51:15: 'class' IDFC ( 'inherit' IDFC )? '=' '(' class_item_decl ')'
            {
            string_literal3=(Token)match(input,38,FOLLOW_38_in_class_decl231);  
            stream_38.add(string_literal3);

            IDFC4=(Token)match(input,IDFC,FOLLOW_IDFC_in_class_decl233);  
            stream_IDFC.add(IDFC4);

            // Looc.g:51:28: ( 'inherit' IDFC )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==39) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // Looc.g:51:29: 'inherit' IDFC
                    {
                    string_literal5=(Token)match(input,39,FOLLOW_39_in_class_decl236);  
                    stream_39.add(string_literal5);

                    IDFC6=(Token)match(input,IDFC,FOLLOW_IDFC_in_class_decl238);  
                    stream_IDFC.add(IDFC6);


                    }
                    break;

            }

            char_literal7=(Token)match(input,40,FOLLOW_40_in_class_decl242);  
            stream_40.add(char_literal7);

            char_literal8=(Token)match(input,41,FOLLOW_41_in_class_decl244);  
            stream_41.add(char_literal8);

            pushFollow(FOLLOW_class_item_decl_in_class_decl246);
            class_item_decl9=class_item_decl();

            state._fsp--;

            stream_class_item_decl.add(class_item_decl9.getTree());
            char_literal10=(Token)match(input,42,FOLLOW_42_in_class_decl248);  
            stream_42.add(char_literal10);



            // AST REWRITE
            // elements: IDFC, IDFC, class_item_decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 51:74: -> ^( CLASS IDFC ( IDFC )? class_item_decl )
            {
                // Looc.g:51:77: ^( CLASS IDFC ( IDFC )? class_item_decl )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CLASS, "CLASS"), root_1);

                adaptor.addChild(root_1, stream_IDFC.nextNode());
                // Looc.g:51:90: ( IDFC )?
                if ( stream_IDFC.hasNext() ) {
                    adaptor.addChild(root_1, stream_IDFC.nextNode());

                }
                stream_IDFC.reset();
                adaptor.addChild(root_1, stream_class_item_decl.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "class_decl"

    public static class class_item_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "class_item_decl"
    // Looc.g:53:1: class_item_decl : ( decl )* -> ^( BLOCK ( decl )* ) ;
    public final LoocParser.class_item_decl_return class_item_decl() throws RecognitionException {
        LoocParser.class_item_decl_return retval = new LoocParser.class_item_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LoocParser.decl_return decl11 = null;


        RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
        try {
            // Looc.g:53:16: ( ( decl )* -> ^( BLOCK ( decl )* ) )
            // Looc.g:53:20: ( decl )*
            {
            // Looc.g:53:20: ( decl )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==43||LA4_0==48) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // Looc.g:53:20: decl
            	    {
            	    pushFollow(FOLLOW_decl_in_class_item_decl272);
            	    decl11=decl();

            	    state._fsp--;

            	    stream_decl.add(decl11.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);



            // AST REWRITE
            // elements: decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 53:26: -> ^( BLOCK ( decl )* )
            {
                // Looc.g:53:29: ^( BLOCK ( decl )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_1);

                // Looc.g:53:37: ( decl )*
                while ( stream_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_decl.nextTree());

                }
                stream_decl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "class_item_decl"

    public static class decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // Looc.g:55:1: decl : ( var_decl | method_decl );
    public final LoocParser.decl_return decl() throws RecognitionException {
        LoocParser.decl_return retval = new LoocParser.decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LoocParser.var_decl_return var_decl12 = null;

        LoocParser.method_decl_return method_decl13 = null;



        try {
            // Looc.g:55:5: ( var_decl | method_decl )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==43) ) {
                alt5=1;
            }
            else if ( (LA5_0==48) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // Looc.g:55:9: var_decl
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_decl_in_decl291);
                    var_decl12=var_decl();

                    state._fsp--;

                    adaptor.addChild(root_0, var_decl12.getTree());

                    }
                    break;
                case 2 :
                    // Looc.g:56:9: method_decl
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_method_decl_in_decl301);
                    method_decl13=method_decl();

                    state._fsp--;

                    adaptor.addChild(root_0, method_decl13.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class decl_ins_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl_ins"
    // Looc.g:59:1: decl_ins : ( var_decl | instruction );
    public final LoocParser.decl_ins_return decl_ins() throws RecognitionException {
        LoocParser.decl_ins_return retval = new LoocParser.decl_ins_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        LoocParser.var_decl_return var_decl14 = null;

        LoocParser.instruction_return instruction15 = null;



        try {
            // Looc.g:59:9: ( var_decl | instruction )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==43) ) {
                alt6=1;
            }
            else if ( (LA6_0==IDF||LA6_0==49||LA6_0==53||LA6_0==57||LA6_0==60||(LA6_0>=63 && LA6_0<=65)) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // Looc.g:59:13: var_decl
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_decl_in_decl_ins315);
                    var_decl14=var_decl();

                    state._fsp--;

                    adaptor.addChild(root_0, var_decl14.getTree());

                    }
                    break;
                case 2 :
                    // Looc.g:60:13: instruction
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_instruction_in_decl_ins329);
                    instruction15=instruction();

                    state._fsp--;

                    adaptor.addChild(root_0, instruction15.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl_ins"

    public static class var_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // Looc.g:63:1: var_decl : 'var' IDF ':' type ';' -> ^( VARDEC IDF type ) ;
    public final LoocParser.var_decl_return var_decl() throws RecognitionException {
        LoocParser.var_decl_return retval = new LoocParser.var_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal16=null;
        Token IDF17=null;
        Token char_literal18=null;
        Token char_literal20=null;
        LoocParser.type_return type19 = null;


        CommonTree string_literal16_tree=null;
        CommonTree IDF17_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree char_literal20_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
        RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // Looc.g:63:9: ( 'var' IDF ':' type ';' -> ^( VARDEC IDF type ) )
            // Looc.g:63:13: 'var' IDF ':' type ';'
            {
            string_literal16=(Token)match(input,43,FOLLOW_43_in_var_decl347);  
            stream_43.add(string_literal16);

            IDF17=(Token)match(input,IDF,FOLLOW_IDF_in_var_decl349);  
            stream_IDF.add(IDF17);

            char_literal18=(Token)match(input,44,FOLLOW_44_in_var_decl351);  
            stream_44.add(char_literal18);

            pushFollow(FOLLOW_type_in_var_decl353);
            type19=type();

            state._fsp--;

            stream_type.add(type19.getTree());
            char_literal20=(Token)match(input,45,FOLLOW_45_in_var_decl355);  
            stream_45.add(char_literal20);



            // AST REWRITE
            // elements: IDF, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 63:36: -> ^( VARDEC IDF type )
            {
                // Looc.g:63:39: ^( VARDEC IDF type )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VARDEC, "VARDEC"), root_1);

                adaptor.addChild(root_1, stream_IDF.nextNode());
                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl"

    public static class type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // Looc.g:65:1: type : ( IDFC -> ^( IDFC ) | 'int' -> ^( INT ) | 'string' -> ^( STRING ) );
    public final LoocParser.type_return type() throws RecognitionException {
        LoocParser.type_return retval = new LoocParser.type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDFC21=null;
        Token string_literal22=null;
        Token string_literal23=null;

        CommonTree IDFC21_tree=null;
        CommonTree string_literal22_tree=null;
        CommonTree string_literal23_tree=null;
        RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_IDFC=new RewriteRuleTokenStream(adaptor,"token IDFC");

        try {
            // Looc.g:65:5: ( IDFC -> ^( IDFC ) | 'int' -> ^( INT ) | 'string' -> ^( STRING ) )
            int alt7=3;
            switch ( input.LA(1) ) {
            case IDFC:
                {
                alt7=1;
                }
                break;
            case 46:
                {
                alt7=2;
                }
                break;
            case 47:
                {
                alt7=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // Looc.g:65:9: IDFC
                    {
                    IDFC21=(Token)match(input,IDFC,FOLLOW_IDFC_in_type374);  
                    stream_IDFC.add(IDFC21);



                    // AST REWRITE
                    // elements: IDFC
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 65:14: -> ^( IDFC )
                    {
                        // Looc.g:65:17: ^( IDFC )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_IDFC.nextNode(), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // Looc.g:66:9: 'int'
                    {
                    string_literal22=(Token)match(input,46,FOLLOW_46_in_type390);  
                    stream_46.add(string_literal22);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 66:15: -> ^( INT )
                    {
                        // Looc.g:66:18: ^( INT )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(INT, "INT"), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // Looc.g:67:9: 'string'
                    {
                    string_literal23=(Token)match(input,47,FOLLOW_47_in_type406);  
                    stream_47.add(string_literal23);



                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 67:18: -> ^( STRING )
                    {
                        // Looc.g:67:21: ^( STRING )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STRING, "STRING"), root_1);
